# cf-build

./: .gitignore  .gitmodules  CMakeLists.txt  GCCoreFoundationConfig.cmake.in  generate-gcc-manifests.ps1  generate-manifests.ps1  generate-msvc-manifest.ps1
cmake-package-configs/: CURLConfig.cmake  FindLibXml2.cmake
